Update Sway Nordic: modify configs and add new kitty/rofi themes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Nord Color Scheme
 
-# Base Colors
+# Temel renkler
 foreground #D8DEE9
 background #2E3440
 selection_foreground #2E3440
@@ -10,7 +10,7 @@ selection_background #88C0D0
 cursor #D8DEE9
 cursor_text_color #2E3440
 
-##############
+# Normal renkler
 color0 #3B4252
 color1 #BF616A
 color2 #A3BE8C
@@ -20,7 +20,7 @@ color5 #B48EAD
 color6 #88C0D0
 color7 #E5E9F0
 
-###############
+# Parlak renkler
 color8 #4C566A
 color9 #BF616A
 color10 #A3BE8C
@@ -30,13 +30,13 @@ color13 #B48EAD
 color14 #8FBCBB
 color15 #ECEFF4
 
-# Font Settings
+# Font ayarları (varsa güncelle)
 font_family JetBrainsMono Nerd Font
 font_size 11.0
 bold_font auto
 italic_font auto
 bold_italic_font auto
 
-# Window Settings
+# Pencere ayarları
 background_opacity 0.95
 window_padding_width 10
